added montserrat font

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,13 @@
 /* @import "../../node_modules/bootstrap/scss/bootstrap.scss"; */
 /* @import "../../node_modules/bootstrap-vue/src/index.scss"; */
 @import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap');
 
 
 body {
   overflow-x: hidden;
+  font-family: 'Montserrat', sans-serif;
+}
+h1, h2, h3, h4, h5 {
   font-family: 'Bebas Neue', cursive;
 }
